parse platform request
